--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,73 @@ embedding_model/ProtMamba-ssm/
 embedding_model/ptm-mamba/
 embedding_model/proteinBERT/
 embedding_model/nanoGPT/
+model/SoMatt_Survival_Data_Balanced_Full.csv
+model/SoMatt_Survival_Data_Balanced.csv
+model/SoMatt_Survival_Data_Uncensored_Full.csv
+model/SoMatt_Survival_Data.csv
+model/tsne_output.pkl
+model/best_models/model_binary_BINARYdata_CANCER_TYPE_0_00percentMinCancerType.pt
+model/best_models/model_binary_BINARYdata_CANCER_TYPE_0_10percentMinCancerType.pt
+model/best_models/model_binary_BINARYdata_CANCER_TYPE_1_00percentMinCancerType.pt
+model/best_models/model_binary_BINARYdata_CANCER_TYPE_DETAILED_0_00percentMinCancerType.pt
+model/best_models/model_binary_BINARYdata_CANCER_TYPE_DETAILED_0_10percentMinCancerType.pt
+model/best_models/model_binary_BINARYdata_CANCER_TYPE_DETAILED_1_00percentMinCancerType.pt
+model/best_models/model_binary_CANCER_TYPE_DETAILED_INT_data_0_00percentMinCancerType.pt
+model/best_models/model_binary_CANCER_TYPE_DETAILED_INT_data_0_10percentMinCancerType.pt
+model/best_models/model_binary_CANCER_TYPE_DETAILED_INT_data_1_00percentMinCancerType.pt
+model/best_models/model_binary_CANCER_TYPE_INT_data_0_00percentMinCancerType.pt
+model/best_models/model_binary_CANCER_TYPE_INT_data_0_10percentMinCancerType.pt
+model/best_models/model_binary_CANCER_TYPE_INT_data_1_00percentMinCancerType.pt
+model/best_models/model_binary_survival_balanced.pt
+model/best_models/model_binary_survival_uncensored.pt
+model/best_models/model_binary_survival.pt
+model/best_models/model_mha_data_CANCER_TYPE_0_00percentMinCancerType.pt
+model/best_models/model_mha_data_CANCER_TYPE_0_10percentMinCancerType.pt
+model/best_models/model_mha_data_CANCER_TYPE_1_00percentMinCancerType.pt
+model/best_models/model_mha_data_CANCER_TYPE_DETAILED_0_00percentMinCancerType.pt
+model/best_models/model_mha_data_CANCER_TYPE_DETAILED_0_10percentMinCancerType.pt
+model/best_models/model_mha_data_CANCER_TYPE_DETAILED_1_00percentMinCancerType.pt
+model/best_models/model_mha_survival.pt
+model/best_models/model_sha_CANCER_TYPE_INT_data_0_00percentMinCancerType.pt
+model/best_models/model_sha_CANCER_TYPE_INT_data_1_00percentMinCancerType.pt
+model/best_models/model_sha_data_CANCER_TYPE_0_00percentMinCancerType.pt
+model/best_models/model_sha_data_CANCER_TYPE_0_10percentMinCancerType.pt
+model/best_models/model_sha_data_CANCER_TYPE_1_00percentMinCancerType.pt
+model/best_models/model_sha_data_CANCER_TYPE_DETAILED_0_00percentMinCancerType.pt
+model/best_models/model_sha_data_CANCER_TYPE_DETAILED_0_10percentMinCancerType.pt
+model/best_models/model_sha_data_CANCER_TYPE_DETAILED_1_00percentMinCancerType.pt
+model/best_models/model_sha_survival_balanced.pt
+model/best_models/model_sha_survival_uncensored.pt
+model/best_models/model_sha_survival.pt
+model/figures/kmeans60_clusters.pdf
+model/figures/SNN_cluster.pdf
+model/figures/stratified_cluster.pdf
+model/figures/stratified.pdf
+model/figures/survival_full.pdf
+model/figures/tumortype_metrics.pdf
+model/km/Acute_Myeloid_Leukemia_km60.csv
+model/km/bidc_km60.csv
+model/km/Bladder_Urothelial_Carcinoma_km60.csv
+model/km/Breast_Invasive_Ductal_Carcinoma_km60.csv
+model/km/Cholangiocarcinoma_km60.csv
+model/km/Colon_Adenocarcinoma_km60.csv
+model/km/combined_subtypes_km60.csv
+model/km/Diffuse_Large_BCell_Lymphoma_NOS_km60.csv
+model/km/Esophageal_Adenocarcinoma_km60.csv
+model/km/Glioblastoma_km60.csv
+model/km/glioblastoma_km60.csv
+model/km/HighGrade_Serous_Ovarian_Cancer_km60.csv
+model/km/Leiomyosarcoma_km60.csv
+model/km/Lung_Adenocarcinoma_km60.csv
+model/km/Melanoma_km60.csv
+model/km/Myeloproliferative_Neoplasms_km60.csv
+model/km/Oral_Cavity_Squamous_Cell_Carcinoma_km60.csv
+model/km/pa_km60.csv
+model/km/Pancreatic_Adenocarcinoma_km60.csv
+model/km/Papillary_Thyroid_Cancer_km60.csv
+model/km/Prostate_Adenocarcinoma_km60.csv
+model/km/Renal_Clear_Cell_Carcinoma_km60.csv
+model/km/uec_km60.csv
+model/km/Uterine_Endometrioid_Carcinoma_km60.csv
+output.png
+model/snn_labs.pkl
