--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,23 @@ model/km/Head_and_Neck_Squamous_Cell_Carcinoma_km60.csv
 model/km/SoMatt_Survival_Data_Balanced_Full.csv
 model/tsne_output_a100.pkl
 model/figures/small_vs_large_assays.pdf
+model/figures/kmeans40_clusters.pdf
+model/km/Acute_Myeloid_Leukemia_km40.csv
+model/km/Bladder_Urothelial_Carcinoma_km40.csv
+model/km/Breast_Invasive_Ductal_Carcinoma_km40.csv
+model/km/Cholangiocarcinoma_km40.csv
+model/km/Chronic_Lymphocytic_LeukemiaSmall_Lymphocytic_Lymphoma_km40.csv
+model/km/Colon_Adenocarcinoma_km40.csv
+model/km/Esophageal_Adenocarcinoma_km40.csv
+model/km/Glioblastoma_km40.csv
+model/km/Head_and_Neck_Squamous_Cell_Carcinoma_km40.csv
+model/km/HighGrade_Serous_Ovarian_Cancer_km40.csv
+model/km/Leiomyosarcoma_km40.csv
+model/km/Lung_Adenocarcinoma_km40.csv
+model/km/Melanoma_km40.csv
+model/km/Myeloproliferative_Neoplasms_km40.csv
+model/km/Pancreatic_Adenocarcinoma_km40.csv
+model/km/Papillary_Thyroid_Cancer_km40.csv
+model/km/Prostate_Adenocarcinoma_km40.csv
+model/km/Renal_Clear_Cell_Carcinoma_km40.csv
+model/km/Uterine_Endometrioid_Carcinoma_km40.csv
