--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,25 @@ model/km/Papillary_Thyroid_Cancer_km40.csv
 model/km/Prostate_Adenocarcinoma_km40.csv
 model/km/Renal_Clear_Cell_Carcinoma_km40.csv
 model/km/Uterine_Endometrioid_Carcinoma_km40.csv
+dbsnp/00-common_all.vcf
+dbsnp/00-common_all/00-common_all_0_2000000.csv
+dbsnp/00-common_all/00-common_all_2000000_4000000.csv
+dbsnp/00-common_all/00-common_all_4000000_6000000.csv
+dbsnp/00-common_all/00-common_all_6000000_8000000.csv
+dbsnp/00-common_all/00-common_all_8000000_10000000.csv
+dbsnp/00-common_all/00-common_all_10000000_12000000.csv
+dbsnp/00-common_all/00-common_all_12000000_14000000.csv
+dbsnp/00-common_all/00-common_all_14000000_16000000.csv
+dbsnp/00-common_all/00-common_all_16000000_18000000.csv
+dbsnp/00-common_all/00-common_all_18000000_20000000.csv
+dbsnp/00-common_all/00-common_all_20000000_22000000.csv
+dbsnp/00-common_all/00-common_all_22000000_24000000.csv
+dbsnp/00-common_all/00-common_all_24000000_26000000.csv
+dbsnp/00-common_all/00-common_all_26000000_28000000.csv
+dbsnp/00-common_all/00-common_all_28000000_30000000.csv
+dbsnp/00-common_all/00-common_all_30000000_32000000.csv
+dbsnp/00-common_all/00-common_all_32000000_34000000.csv
+dbsnp/00-common_all/00-common_all_34000000_36000000.csv
+dbsnp/00-common_all/00-common_all_36000000_37463647.csv
+dbsnp/CancerMutationCensus_AllData_Tsv_v101_GRCh37/CancerMutationCensus_AllData_v101_GRCh37.tsv
+dbsnp/CancerMutationCensus_AllData_Tsv_v101_GRCh37/README_CancerMutationCensus_AllData_v101_GRCh37.txt
