test_somatt_model

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,29 @@ wxs/clinical.cohort.2024-12-13.tar
 pancan/mc3.v0.2.8.PUBLIC.maf
 pancan/clinical_PANCAN_patient_with_followup.tsv
 muat/muat_results_1_00percentMinCancerType.csv
+data_processing/ref_emb_json.ipynb
+muat/snv150_df_withPos.csv
+muat/snv150_df.csv
+muat/snv150_msk468_df_withPos.csv
+muat/snv150_msk468_df.csv
+muat/snv150_msk468_survival_df_withPos.csv
+muat/snv150_msk468_survival_df.csv
+muat/snv150_survival_df_withPos.csv
+muat/snv150_survival_df.csv
+muat/run_train_fusion.txt
+muat/cosmic.txt
+muat/cosmic_test.txt
+muat/cosmic_fit
+muat/cosmic_10_percent.txt
+model/norm_emb_5fold
+muat/matrix_test/JOB_METADATA_SPA.txt
+muat/matrix_test/Assignment_Solution/Activities/Assignment_Solution_Activities.txt
+muat/matrix_test/Assignment_Solution/Signatures/Assignment_Solution_Signatures.txt
+muat/matrix_test/Assignment_Solution/Solution_Stats/Assignment_Solution_Samples_Stats.txt
+muat/matrix_test/Assignment_Solution/Solution_Stats/Assignment_Solution_Signature_Assignment_log.txt
+embedding_model/ESM/temp/failed_batches_canonical_mut_embeddings_esm3.txt
+embedding_model/ESM/test.npy
+reference_genome
+labeled_data
+labeled_data
+reference_genome
